<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/barra_aviso"
        android:orientation="horizontal"
        android:background="@color/azul_claro">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_toStartOf="@+id/switch_notificacao"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/text_lembretes_aviso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:id="@+id/switch_notificacao"
            android:checked="true" />


    </LinearLayout>

    <ListView
        android:layout_below="@+id/barra_aviso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/favoritos_list"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/sem_bandas"
        android:id="@+id/sem_bandas_favoritas"
        android:layout_below="@+id/barra_aviso"
        android:layout_centerHorizontal="true" />

</RelativeLayout>