<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:id="@+id/fragment_maps_container">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </FrameLayout>

        <LinearLayout
            android:id="@+id/tela_total"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="100"
            android:visibility="invisible"
            android:background="@android:color/transparent"
            android:orientation="vertical">


            <View
                android:id="@+id/tela_parte1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="41"
                android:background="@drawable/background_transparente" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="horizontal">

                <View
                    android:id="@+id/tela_parte2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="6"
                    android:background="@drawable/background_transparente" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/circulo"
                    android:layout_weight="2" />

                <View
                    android:id="@+id/tela_parte3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="6"
                    android:background="@drawable/background_transparente" />

            </LinearLayout>

            <View
                android:id="@+id/tela_parte4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:background="@drawable/background_transparente" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="30"
                android:orientation="horizontal">

                <View
                    android:id="@+id/tela_parte5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_transparente" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="20"
                    android:background="#fff"
                    android:clickable="false"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nomeDialog"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/preto" />

                    <TextView
                        android:id="@+id/nomeDescription"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="start"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1.8"
                        android:textColor="@color/preto"
                        android:text="description"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="end"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="#fff"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_rota"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center|end"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_route"/>

                        <TextView
                            android:id="@+id/iv_rota_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center|end"
                            android:textColor="@color/azul"
                            android:text="@string/shout_route" />

                    </LinearLayout>
                </LinearLayout>


                <View
                    android:id="@+id/tela_parte6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_transparente" />

            </LinearLayout>


            <View
                android:id="@+id/tela_parte7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:background="@drawable/background_transparente" />

        </LinearLayout>

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/multiple_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            fab:fab_addButtonColorNormal="@color/azul_claro"
            fab:fab_addButtonColorPressed="@color/azul_escuro"
            fab:fab_addButtonPlusIconColor="@color/branco"
            fab:fab_labelStyle="@style/menu_labels_white_style"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_title="@string/to_pp"
                fab:fab_colorNormal="@color/branco"
                fab:fab_colorPressed="@color/background"
                fab:fab_icon="@drawable/ic_bt_map_pp"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/action_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_title="@string/my_location"
                fab:fab_colorNormal="@color/branco"
                fab:fab_colorPressed="@color/background"
                fab:fab_icon="@drawable/ic_bt_map_mylocation"/>



        </com.getbase.floatingactionbutton.FloatingActionsMenu>
        <!--<com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/go_to_pp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/fireliked"
            fab:fab_colorNormal="@color/laranja"
            fab:fab_colorPressed="@color/laranja_escuro"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentLeft="true" />-->
    </RelativeLayout>
</LinearLayout>
